"Change the show more button back ground"
- "Change the show more button back ground"

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -51,7 +51,7 @@ form button{
     font-size: 18px;
 }
 #show-more-btn{
-    background-color: #ff3929;
+    background-color: #262630;
     color: #fff;
     border: 0;
     outline: 0;
